# playground

./: .coveragerc  .gitattributes  .gitignore  run_all_tests.sh  run_all_tests_local.ps1  structure.md
git-epic-creator/e2e_tests/: AUTHENTICATION_FIX_SUMMARY.md  Dockerfile  README.md  pyproject.toml
git-epic-creator/e2e_tests/resources/: drift_search_cyphers.txt
git-epic-creator/e2e_tests/src/: config.py  conftest.py  shared_utils.py  test_celery_task_monitor.py  test_document_workflow.py  test_neo4j_drift_search.py  test_services_health.py  test_ui_workflow.py
git-epic-creator/e2e_tests/test-results/: results.xml
git-epic-creator/e2e_tests/test_drift_search/: TEST_DRIFT_SEARCH.md
git-epic-creator/services/ai_requirements_service/: Dockerfile  README.md  pyproject.toml  run_local.bat
git-epic-creator/services/ai_tasks_service/: Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
git-epic-creator/services/ai_workflow_service/: Dockerfile  README.md  pyproject.toml  run_local.bat
git-epic-creator/services/authentication_service/: Dockerfile  README.md  pyproject.toml
git-epic-creator/services/code_graph_ingestion_service/: COBOL_NODE_KINDS_REFERENCE.md  Cargo.toml  Dockerfile  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  run_local.bat
git-epic-creator/services/db_init_service/: Dockerfile  README.md  pyproject.toml
git-epic-creator/services/document_processing_service/: Dockerfile  Dockerfile.base  Dockerfile.worker  README.md  pyproject.toml
git-epic-creator/services/gitlab_client_service/: Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
git-epic-creator/services/gitlab_mock_service/: Dockerfile  OAUTH_INTEGRATION_FIX.md  README.md  pyproject.toml
git-epic-creator/services/gpt_oss/: Dockerfile  README.md  pyproject.toml
git-epic-creator/services/gpt_oss_gpu/: Dockerfile  README.md  pyproject.toml
git-epic-creator/services/mock_auth_service/: Dockerfile  README.md  pyproject.toml  test_config.py  test_integration.py  test_key_manager.py  test_key_manager_config_integration.py
git-epic-creator/services/neo4j_ingestion_service/: COMMUNITY_ANALYSIS.md  Dockerfile  OPTIMIZATION_SUMMARY.md  README.md  app.py  diagnostic_queries.cypher  pyproject.toml  refactoring_plan.md  start_local.bat  test_community_analysis.py
git-epic-creator/services/neo4j_maintanance_service/: Dockerfile  README.md  pyproject.toml
git-epic-creator/services/neo4j_repository_service/: Cargo.toml  Dockerfile  README.md
git-epic-creator/services/neo4j_retrieval_mcp_server/: Dockerfile  README.md  pyproject.toml
git-epic-creator/services/neo4j_retrieval_service/: Dockerfile  README.md  REFACTORING_SUMMARY.md  __init__.py  pyproject.toml
git-epic-creator/services/openai_mock_service/: Dockerfile  README.md  pyproject.toml
git-epic-creator/services/project_management_service/: Dockerfile  README.md  pyproject.toml
git-epic-creator/services/shared/: pyproject.toml
git-epic-creator/services/tree_sitter_cobol_binding/: Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.py
git-epic-creator/services/ui_service/: Dockerfile  QUICK_START_TASKS_UI.md  README.md  pyproject.toml  run_local.bat
risk-analytics-agent/: .env.example  .gitignore  README.md  START-SERVICES-README.md  audit_unused_cypher_4420982b.py  code_584e115a.py  code_70b528a5.py  code_9c67730c.py  debug-healthcheck.sh  docker-compose.yml  env.example  muni_trader_ui.html  pitch  pyproject.toml  requirements.txt  servicebus-config.json  setup.py  start-services.bat  start-services.ps1  stop-services.bat  stop-services.ps1
risk-analytics-agent/ai_docs/: BRD_MuniBidWanted_UI.md  CovenantExtractionService_part.md  EconomicCalendarService_part.md  FinCalculations_part.md  MarketDataFeed_Requirements.md  MarketDataFeed_part.md  MarketRegime_part.md  NewsSentiment_part.md  OwnershipDataService_part.md  RepoDataService_part.md  RiskPredictionModel_part.md  RiskSynthesis_part.md  StateFiscalFeed_part.md  fi_risk_analytics.md  implementation_checklist.md  pitch.md  risk_analysis_example.html
risk-analytics-agent/ai_docs/1_architecture/: NewsSentimentService_SystemArchitecture.md  RiskAnalyticsSystem_C4.dsl  SecutrityMasterFeed.md
risk-analytics-agent/ai_docs/2_data_services/: EconomicCalendarService.md  MarketDataFeed.md  NewsSentimentService.md  OwnershipDataService.md  SecurityMasterFeed.md  SecurityMasterService.md  TradeHistoryService.md
risk-analytics-agent/ai_docs/3_core_logic/: FinancialCalculationService.md  MarketRegimeService.md  RiskPredictionService.md
risk-analytics-agent/ai_docs/4_application_layer/: OrchestratorService.md  RiskSynthesisService.md
risk-analytics-agent/ai_docs/5_service_code_structure/: NewsSentimentService_Structure.md
risk-analytics-agent/ai_docs/6_task_breakdown/: NewsSentimentService_tasks.md
risk-analytics-agent/ai_docs/market_data_requests/: Bloomberg BLAPI - MUNIFLOW - Request.py  Bloomberg BLAPI - Request.py  ICI - Net Flows into Muni - MUNIFLOW - Request.py
risk-analytics-agent/ai_docs/market_data_responses/: Bloomberg BLAPI - HYG - Response.json  Bloomberg BLAPI - LQD - Response.json  Bloomberg BLAPI - MOVE - Response.json  Bloomberg BLAPI - MUNIFLOW - Response.json  Bloomberg BLAPI - USCPIYOY - Response.json  FRED - 10-year Swap Spread - Response.json  FRED - T5YIE - Response.json  FRED - USCPIYOY - Response.json  ICE - 10-year Swap Spread - Response.json  ICE - MOVE - Response.json  (+4 more)
risk-analytics-agent/configs/: app_config.yaml
risk-analytics-agent/docs/: README.md  architecture_design.md  data_contracts.md  data_contracts_sla.md  implementation_documentation.md  research_summary.md  todo.md
risk-analytics-agent/prompts/: business-analyst.mdc  python-developer.mdc  system-architect.mdc  trader.mdc
risk-analytics-agent/specs/: pre-trade-risk-scoring-genai-requirements.md
risk-analytics-agent/src/: __init__.py  main.py
risk-analytics-agent/ui/: BRD_MuniBidWanted_UI.md  Valuation_Intelligence_V2_Requirements.md  app.js  index.html  refactoring_summary.md  style.css
(+1099 files in other folders)
