[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-requirements-service"
version = "1.0.0"
description = "Agentic AI Requirements microservice, handling ai-enhanced requirements generation"
authors = [
    { name = "Vladyslav Avilov", email = "vladyslav.avilov@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.121.0",
    "uvicorn==0.38.0",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "structlog==25.5.0",
    "httpx==0.28.1",
    "tenacity==9.1.2",
    "openai==2.7.1",
    "deepeval==3.7.0",
    "litellm==1.79.1",
    "langgraph==1.0.2",
    "langchain-core==1.0.3",
    "langchain-openai==1.0.2",
    "shared @ file:../shared"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"] 