[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-tasks-service"
version = "1.0.0"
description = "Agentic AI Tasks/Backlog microservice for epic and task generation"
authors = [
    { name = "Vladyslav Avilov", email = "vladyslav.avilov@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "structlog",
    "httpx",
    "tenacity",
    "openai",
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "redis[hiredis]>=5.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "deepeval",
    "litellm",
    "shared @ file:../shared"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]


