[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-tasks-service"
version = "1.0.0"
description = "Agentic AI Tasks/Backlog microservice for epic and task generation"
authors = [
    { name = "Vladyslav Avilov", email = "vladyslav.avilov@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib==1.5.0",
    "fastapi==0.121.0",
    "uvicorn==0.38.0",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "structlog==25.5.0",
    "httpx==0.28.1",
    "tenacity==9.1.2",
    "openai==2.7.1",
    "langgraph==1.0.2",
    "langchain-core==1.0.3",
    "langchain-openai==1.0.2",
    "redis[hiredis]==7.0.1",
    "numpy==2.3.4",
    "scikit-learn==1.7.2",
    "deepeval==3.7.0",
    "litellm==1.79.1",
    "shared @ file:../shared"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]


