[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "authentication-service"
version = "1.0.0"
description = "Centralized authentication service for token exchange and S2S JWT minting"
authors = [
    { name = "Vladyslav Avilov", email = "vladyslav.avilov@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.121.0",
    "uvicorn==0.38.0",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "httpx==0.28.1",
    "structlog==25.5.0",
    "shared @ file:../shared"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
