[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "db_init_service"
version = "0.1.0"
description = "A one-call microservice to initialize the database schema."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.121.0",
    "uvicorn[standard]==0.38.0",
    "sqlalchemy==2.0.44",
    "psycopg2-binary==2.9.11",
    "asyncpg==0.30.0",
    "sqlalchemy-utils==0.42.0",
    "structlog==25.5.0",
    "python-dotenv==1.2.1",
    "pydantic-settings==2.11.0",
    "shared @ file:../shared"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"] 

[tool.pytest.ini_options]
pythonpath = ["src"]