[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "document-processing-service"
version = "1.0.0"
description = "Document Processing Service for Agentic AI Requirements Engineering System"
authors = [
    { name = "Vladyslav Avilov", email = "vladyslav.avilov@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "vllm==0.11.1.1",
    "fastapi==0.121.1",
    "uvicorn==0.38.0",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "structlog==25.5.0",
    "asyncpg==0.30.0",
    "tika==3.1.0",
    "azure-storage-blob==12.27.1",
    "httpx==0.28.1",
    "requests==2.32.5",
    "tenacity==9.1.2",
    "docling[vlm]==2.58.0",
    "onnxruntime==1.23.2",  # Required by rapidocr-onnxruntime for OCR model inference
    "shared @ file:../shared"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "httpx==0.28.1"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"] 