[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-mock-service"
version = "0.1.0"
description = "Mock GitLab service for local development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.121.0",
    "uvicorn[standard]==0.38.0",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "python-multipart==0.0.20",
    "shared @ file:../shared"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "httpx==0.28.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gitlab_mock_service = ["py.typed"]

