[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mock_auth_service"
version = "0.1.0"
description = "A microservice to mock Azure AD authentication for end to end testing."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "structlog",
    "python-dotenv",
    "pydantic-settings",
    "python-jose[cryptography]", # Required for JWT creation and signing
    "cryptography",            # Required for key generation
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"] 

[tool.pytest.ini_options]
pythonpath = ["src"] 