[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mock_auth_service"
version = "0.1.0"
description = "A microservice to mock Azure AD authentication for end to end testing."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.121.0",
    "uvicorn[standard]==0.38.0",
    "structlog==25.5.0",
    "python-dotenv==1.2.1",
    "pydantic-settings==2.11.0",
    "python-jose[cryptography]==3.5.0", # Required for JWT creation and signing
    "cryptography==46.0.3",            # Required for key generation
    "python-multipart==0.0.20",        # Required for form data parsing
    "shared @ file:../shared"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx==0.28.1"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"] 

[tool.pytest.ini_options]
pythonpath = ["src"] 