[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo4j_ingestion_service"
version = "0.1.0"
description = "A microservice to ingest the Neo4j Graph with the data."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "neo4j",
    "graphrag==2.7.0",
    "openai",
    "structlog",
    "python-dotenv",
    "pydantic-settings",
    "pandas",
    "pyarrow",
    "pyyaml",
    "azure-storage-blob",
    "celery",
    "redis",
    "lancedb",
    "shared @ file:../shared"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "httpx"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"] 

[tool.pytest.ini_options]
pythonpath = ["src"] 
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.dynamic]
version = {attr = "neo4j_ingestion_service.__version__"}

[project.scripts]
neo4j-ingestion-service = "neo4j_ingestion_service.main:main"