[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo4j_ingestion_service"
version = "0.1.0"
description = "A microservice to ingest the graph via neo4j-repository-service."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "joblib==1.5.0",
    "fastapi==0.121.0",
    "uvicorn[standard]==0.38.0",
    "httpx==0.28.1",
    "graphrag==2.7.0",
    "openai==2.7.1",
    "structlog==25.5.0",
    "python-dotenv==1.2.1",
    "pydantic-settings==2.11.0",
    "pandas==2.3.3",
    "pyarrow==22.0.0",
    "pyyaml==6.0.3",
    "azure-storage-blob==12.27.1",
    "celery==5.5.3",
    "redis==7.0.1",
    "lancedb==0.25.2",
    "shared @ file:../shared"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "httpx==0.28.1"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"] 

[tool.pytest.ini_options]
pythonpath = ["src"] 
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.dynamic]
version = {attr = "neo4j_ingestion_service.__version__"}

[project.scripts]
neo4j-ingestion-service = "neo4j_ingestion_service.main:main"