[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neo4j_maintanance_service"
version = "0.1.0"
description = "A microservice to initialize and maintain the Neo4j Graph RAG schema."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.121.0",
    "uvicorn[standard]==0.38.0",
    "neo4j==5.28.2",
    "neo4j-graphrag[openai]==1.10.1",
    "structlog==25.5.0",
    "python-dotenv==1.2.1",
    "pydantic-settings==2.11.0",
    "shared @ file:../shared"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"] 

[tool.pytest.ini_options]
pythonpath = ["src"] 