[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neo4j-retrieval-mcp-server"
version = "1.0.0"
description = "MCP Server facade for Neo4j Knowledge Graph retrieval, enabling GitHub Copilot integration"
authors = [
    { name = "Vladyslav Avilov", email = "vladyslav.avilov@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp==2.13.3",
    "httpx==0.28.1",
    "pydantic>=2.10.0,<2.12.0",
    "pydantic-settings>=2.7.0,<2.11.0",
    "structlog==25.5.0",
    "redis[hiredis]==7.0.1",
    "tenacity==9.1.2",
    "shared @ file:../shared"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
