[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neo4j-retrieval-service"
version = "1.0.0"
description = "GraphRAG retrieval microservice, providing enhanced context for ai workflow service"
authors = [
    { name = "Vladyslav Avilov", email = "vladyslav.avilov@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "structlog",
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "neo4j>=5.0.0",
    "tiktoken>=0.5.0",
    "shared @ file:../shared"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"] 