[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-management-service"
version = "1.0.0"
description = "Project Management Service for Agentic AI Requirements Engineering System"
authors = [
    { name = "Vladyslav Avilov", email = "vladyslav.avilov@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.121.0",
    "uvicorn==0.38.0",
    "pydantic==2.12.3",
    "structlog==25.5.0",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.11",
    "redis[hiredis]==7.0.1",
    "azure-storage-blob==12.27.1",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
    "tenacity==9.1.2",
    "shared @ file:../shared"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "httpx"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"] 