[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Common shared library for requirement ai generator tool services."
authors = [
    { name = "Vladyslav Avilov", email = "vladyslav.avilov@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "structlog==25.5.0",
    "fastapi==0.121.0",
    "neo4j==5.28.2",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "python-dotenv==1.2.1",
    "sqlalchemy==2.0.44",
    "sqlalchemy-utils==0.42.0",
    "fastapi-azure-auth==5.2.0",
    "redis[hiredis]==7.0.1",
    "celery==5.5.3",
    "azure-storage-blob==12.27.1",
    "tenacity==9.1.2",
    "python-jose[cryptography]==3.5.0",
    "tiktoken==0.12.0",
    "langchain-core==1.0.3",
    "langchain-openai==1.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::PendingDeprecationWarning"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools]
py-modules = ["models"]

[tool.setuptools.package-dir]
"" = "src"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]